Formulaire d'ajout d'animaux + amélioration code précédent

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -4,3 +4,5 @@ ans: "an(s)"
 date_arrival: "Date d'arrivée: "
 description: "Description: "
 adopt: "Adopter !"
+no-desc: "Aucune description n'est disponible"
+appendAnimal: "Ajouter un animal"
