--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -4,3 +4,5 @@ ans: "an(s)"
 date_arrival: "Date of arrival: "
 description: "Description: "
 adopt: "Adopt !"
+no-desc: "No description is available"
+appendAnimal: "Add an animal"
