update + delete (controller, twig et trad)

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -7,3 +7,4 @@ adopt: "Adopt !"
 price: "$"
 no-desc: "No description is available"
 appendAnimal: "Add an animal"
+updateAnimal: "Update the animal"
