--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -7,3 +7,4 @@ adopt: "Adopter !"
 price: "€"
 no-desc: "Aucune description n'est disponible"
 appendAnimal: "Ajouter un animal"
+updateAnimal: "Mettre à jour l'animal"
