Back-office admin avec add+update+delete animaux

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -8,3 +8,6 @@ price: "$"
 no-desc: "No description is available"
 appendAnimal: "Add an animal"
 updateAnimal: "Update the animal"
+animals: "Animals"
+products: "Products"
+candidacy: "Applications"
