--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -9,3 +9,6 @@ no-desc: "Aucune description n'est disponible"
 appendAnimal: "Ajouter un animal"
 addcart: "Ajouter dans panier"
 updateAnimal: "Mettre à jour l'animal"
+animals: "Animaux"
+products: "Produits"
+candidacy: "Candidatures"
