Back-office admin avec add+update+delete animaux

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -11,3 +11,4 @@ updateAnimal: "Update the animal"
 animals: "Animals"
 products: "Products"
 candidacy: "Applications"
+appendProduct: "Append an product"
