--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -12,3 +12,4 @@ updateAnimal: "Mettre à jour l'animal"
 animals: "Animaux"
 products: "Produits"
 candidacy: "Candidatures"
+appendProduct: "Ajouter un produit"
